--- a/templates/index.html
+++ b/templates/index.html
@@ -14,6 +14,7 @@
     <title>PanGlo'TSE</title>
 </head>
 <body>
+    <drop></drop>
     <form action="{{ url_for('upload') }}" method="post" enctype="multipart/form-data">
         <input id="file-picker" type="file" name="file" accept="image/*" multiple>
         <div id="dropbox">
